# protolang

./: .gitignore  Cargo.toml  LICENSE-MIT
.github/workflows/: release.yaml
generator/: Cargo.toml
generator/src/: main.rs
parser/: Cargo.toml
parser/src/: hl.rs  lib.rs  span.rs
