[package]
name = "protolang-generator"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
itertools = "0.12.1"
protolang-parser = { path = "../parser" }
walkdir = "2.5.0"
regex = "1.10.4"
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
